# kimai_report

./: .gitignore  README.md  dune-project  flake.nix  kimai_report.opam
lib/: activity.ml  activity.mli  api.ml  api.mli  customer.ml  customer.mli  date.ml  decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli  entry.ml  entry.mli  json_impl.ml  json_impl.mli  kimai.ml  percentage.ml  project.ml  project.mli  record.ml  record.mli  repo.ml  repo.mli  report.ml  report.mli  timesheet.ml  web.ml
